<?xml version="1.0"?>
<package>
  <name>ros_ethernet_rmp</name>
  <version>0.0.0</version>
  <description>The ros_ethernet_rmp package</description>
  <maintainer email="RAIL@wpi.edu">RAIL Lab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
